update: footer styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,35 @@
           </div>
         </div>
         <div class="bogo-offer-details" id="offerDetails1">
-          <!-- Additional dynamic content could go here -->
+          <div class="bogo-selection">
+            <label for="bogo-size1">Size</label>
+            <select id="bogo-size1">
+              <option value="S">S</option>
+              <option value="M">M</option>
+              <option value="L">L</option>
+            </select>
+            <label for="bogo-color1">Colour</label>
+            <select id="bogo-color1">
+              <option value="Black">Black</option>
+              <option value="White">White</option>
+              <option value="Blue">Blue</option>
+            </select>
+          </div>
+          <div class="bogo-selection">
+            <label for="bogo-size2">Size</label>
+            <select id="bogo-size2">
+              <option value="S">S</option>
+              <option value="M">M</option>
+              <option value="L">L</option>
+            </select>
+            <label for="bogo-color2">Colour</label>
+            <select id="bogo-color2">
+              <option value="Black">Black</option>
+              <option value="White">White</option>
+              <option value="Blue">Blue</option>
+            </select>
+          </div>
+    
         </div>
       </div>
 
@@ -42,7 +70,35 @@
           </div>
         </div>
         <div class="bogo-offer-details" id="offerDetails2">
-          <!-- Additional dynamic content could go here -->
+          <div class="bogo-selection">
+            <label for="bogo-size1">Size</label>
+            <select id="bogo-size1">
+              <option value="S">S</option>
+              <option value="M">M</option>
+              <option value="L">L</option>
+            </select>
+            <label for="bogo-color1">Colour</label>
+            <select id="bogo-color1">
+              <option value="Black">Black</option>
+              <option value="White">White</option>
+              <option value="Blue">Blue</option>
+            </select>
+          </div>
+          <div class="bogo-selection">
+            <label for="bogo-size2">Size</label>
+            <select id="bogo-size2">
+              <option value="S">S</option>
+              <option value="M">M</option>
+              <option value="L">L</option>
+            </select>
+            <label for="bogo-color2">Colour</label>
+            <select id="bogo-color2">
+              <option value="Black">Black</option>
+              <option value="White">White</option>
+              <option value="Blue">Blue</option>
+            </select>
+          </div>
+          <!-- Placeholder content added here -->
         </div>
       </div>
 
@@ -96,11 +152,11 @@
       <div class="bogo-footer">
         <span class="bogo-free-delivery">Free Delivery</span>
         <span class="bogo-total-price">Total: $18.00 USD</span>
-        <button class="bogo-add-to-cart">+ Add to Cart</button>
-        <p class="bogo-powered-by">
-          Powered by <span class="bogo-brand">Pumper</span>
-        </p>
       </div>
+      <button class="bogo-add-to-cart">+ Add to Cart</button>
+      <p class="bogo-powered-by">
+        Powered by <span class="bogo-brand">Pumper</span>
+      </p>
     </div>
     <script src="script.js"></script>
   </body>
